# toynano

./: README.md  pyproject.toml
src/: run.sh  toynano.sh
src/toynano/: __main__.py  hello.py
